--- a/src/css/app.css
+++ b/src/css/app.css
@@ -38,6 +38,7 @@ html {
 
 #fetchUserDataBtn {
   border: 1px solid #d3d3d3;
+  background-color: #d3d3d3;
   border-radius: 5px;
   width: 100%;
   color: white;
